--- a/pages/index.css
+++ b/pages/index.css
@@ -1,2 +1,11 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/fonts/fonts.css);
+
+@import url(../blocks/body/body.css);
+@import url(../blocks/page/page.css);
+
+p {
+  padding: 0;
+  margin: 0;
+  margin-top: 200px;
+}
