--- a/pages/index.css
+++ b/pages/index.css
@@ -4,6 +4,179 @@
 @import url(../blocks/body/body.css);
 @import url(../blocks/page/page.css);
 
+/* @media screen and (max-width: 1100px) {
+
+}
+@media screen and (max-width: 760px) {
+
+} */
+
+.menu {
+  /* margin: auto; */
+  border: 1px solid red;
+  max-width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+@media screen and (max-width: 760px) {
+  .menu {
+    border: 2px solid cyan;
+
+    flex-direction: column;
+    height: 640px;
+    overflow: hidden;
+    /* justify-content: space-between; */
+  }
+}
+
+.menu__button {
+  border: none;
+  width: 22px;
+  height: 22px;
+  background: url(../images/images-menu/menu_open.svg) 50% 50% / 22px 22px
+    no-repeat;
+  display: none;
+}
+@media screen and (max-width: 800px) {
+  .menu__button {
+    display: block;
+    width: 60px;
+    height: 60px;
+    align-self: flex-end;
+  }
+}
+
+.menu__navigation {
+  order: 2;
+
+  margin: 28px 120px 28px auto;
+}
+@media screen and (max-width: 760px) {
+  .menu__navigation {
+    margin: 0 auto;
+    margin-bottom: 318px;
+    overflow: hidden;
+    /* height: 0px; */
+  }
+}
+
+.menu__links-block {
+  margin: 0;
+  padding: 0;
+  max-width: 500px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  column-gap: 34px;
+}
+@media screen and (max-width: 800px) {
+  .menu__links-block {
+    flex-direction: column;
+    align-content: center;
+    row-gap: 32px;
+    text-align: center;
+  }
+}
+
+.menu__link-wrapper {
+  list-style-type: none;
+}
+
+.menu__link {
+  text-decoration: none;
+  line-height: 18px;
+  font-size: 14px;
+  font-weight: 500;
+  font-style: normal;
+  /* color: #151515; */
+  cursor: pointer;
+}
+
+@media screen and (max-width: 800px) {
+  .menu__link {
+    text-decoration: none;
+    line-height: 18px;
+    font-size: 18px;
+  }
+}
+
+.switch {
+  order: 1;
+
+  width: 135px;
+  /* height: 50px; */
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+@media screen and (max-width: 760px) {
+  .switch {
+    order: 3;
+    align-self: center;
+    margin-bottom: 40px;
+    overflow: hidden;
+    /* height: 0px; */
+  }
+}
+
+.switch__flag-box {
+  width: 44px;
+  height: 24px;
+  border-radius: 12px;
+  display: flex;
+  justify-content: start;
+  background: url(../images/images-menu/green.svg) 18% 50%/ 20px 20px no-repeat;
+  background-color: #fff;
+  transition: background-color 0.3s;
+}
+
+.switch__button-light {
+  cursor: pointer;
+  border: none;
+  width: 28px;
+  height: 28px;
+  background: url(../images/images-menu/switch-light.svg) 50% 50% / 28px 28px
+    no-repeat #efefef;
+}
+
+.switch__button-dark {
+  cursor: pointer;
+  border: none;
+  width: 20px;
+  height: 20px;
+  background: url(../images/images-menu/switch-dark.svg) 50% 50% / 20px 20px
+    no-repeat #efefef;
+}
+
+.switch__flag {
+  width: 20px;
+  height: 20px;
+  margin: 2px;
+}
+
+.par {
+  line-height: 18px;
+}
+
+.light {
+  background-color: #efefef;
+  color: #151515;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.dark {
+  background-color: #333;
+  color: #fff;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.switch__flag-box_dark {
+  background-color: #676767;
+  transition: background-color 0.3s;
+}
+
 p {
   padding: 0;
   margin: 0;
