--- a/pages/index.css
+++ b/pages/index.css
@@ -4,6 +4,29 @@
 @import url(../blocks/body/body.css);
 @import url(../blocks/page/page.css);
 
+/* : переключатель темы*/
+@import url(../blocks/switch/switch.css);
+@import url(../blocks/switch/__flag-box/switch__flag-box.css);
+@import url(../blocks/switch/__flag/switch__flag.css);
+@import url(../blocks/switch/__button-light/switch__button-light.css);
+@import url(../blocks/switch/__button-dark/switch__button-dark.css);
+
+/* : Ссылки*/
+
+/* : Блок навигации*/
+@import url(../blocks/nav-block/nav-block.css);
+@import url(../blocks/nav-block/__wrapper/nav-block__wrapper.css);
+@import url(../blocks/nav-block/__link/nav-block__link.css);
+
+@import url(../blocks/nav-block/__link/_header/nav-block__link_header.css);
+@import url(../blocks/nav-block/_header/nav-block_header.css);
+
+@import url(../blocks/menu/menu.css);
+@import url(../blocks/menu/__subblock/menu__subblock.css);
+@import url(../blocks/menu/__button/menu__button.css);
+@import url(..//blocks/menu/__navigation/menu__navigation.css);
+@import url(../blocks/menu/__links-block/menu__links-block.css);
+
 /* @media screen and (max-width: 1100px) {
 
 }
@@ -11,175 +34,147 @@
 
 } */
 
-.menu {
-  border: 1px solid red;
+.footer {
+  background-color: #efefef;
+  border: 2px solid cyan;
   max-width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  min-height: 424px;
+  display: grid;
+  grid-column: 1fr;
+  grid-template-rows: 1fr, 25px;
+  row-gap: 100px;
 }
+
+.footer__title {
+  margin: 80px 0 50px;
+  /* opacity: 0.5; */
+  max-width: 230px;
+  line-height: 32px;
+  font-size: 24px;
+  font-weight: 600;
+  font-style: normal;
+}
+
 @media screen and (max-width: 760px) {
-  .menu {
-    border: 2px solid cyan;
-    flex-direction: column;
-    overflow: hidden;
+  .footer__title {
+    margin: 60px 0 40px;
+    /* opacity: 0.5; */
+    /* max-width: 100%; */
+    line-height: 32px;
+    font-size: 24px;
+    font-weight: 600;
+    font-style: normal;
   }
 }
 
-.menu__subblock {
-  width: 100%;
-}
-
-@media screen and (max-width: 800px) {
-  .menu__subblock {
-    display: flex;
-    flex-direction: column;
-    /* justify-content: space-between; */
-    row-gap: 0px;
-    height: 0px;
-    margin-bottom: 0px;
-    opacity: 0;
-    transition: opacity 1s, row-gap 1.2s, margin-bottom 1s, height 1s;
-  }
-}
-
-.menu__button {
-  border: none;
-  width: 22px;
-  height: 22px;
-  background: url(../images/images-menu/menu-open-black.svg) 50% 50% / 22px 22px
-    no-repeat;
-  display: none;
-}
-@media screen and (max-width: 800px) {
-  .menu__button {
-    display: block;
-    width: 60px;
-    height: 60px;
-    align-self: flex-end;
-  }
-}
-
-.menu__navigation {
-  order: 2;
-
-  margin: 28px 120px 28px auto;
-}
-@media screen and (max-width: 760px) {
-  .menu__navigation {
-    margin: 0 auto;
-    margin-bottom: 0px;
-    overflow: hidden;
-    /* height: 0px; */
-    transition: margin-bottom 1s;
-  }
-}
-
-.menu__links-block {
+.footer__email {
+  border: 1px solid #c7c7c7;
+  background-color: #efefef;
   margin: 0;
-  padding: 0;
-  max-width: 500px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  column-gap: 34px;
+  width: 340px;
+  height: 50px;
+  padding: 0 20px;
 }
-@media screen and (max-width: 800px) {
-  .menu__links-block {
-    flex-direction: column;
-    align-content: center;
-    row-gap: 32px;
-    text-align: center;
+
+@media screen and (max-width: 760px) {
+  .footer__email {
+    max-width: 240px;
   }
 }
 
-.menu__link-wrapper {
-  list-style-type: none;
-}
-
-.menu__link {
-  text-decoration: none;
-  line-height: 18px;
+.footer__email::placeholder {
+  line-height: 28px;
   font-size: 14px;
   font-weight: 500;
   font-style: normal;
-  /* color: #151515; */
-  cursor: pointer;
+  color: #151515;
+  opacity: 0.7;
 }
 
-@media screen and (max-width: 800px) {
-  .menu__link {
-    text-decoration: none;
-    line-height: 18px;
-    font-size: 18px;
-  }
+.footer__form {
+  /* width: 360px; */
+  height: 50px;
 }
 
-.switch {
-  order: 1;
-
-  width: 135px;
-  /* height: 50px; */
+.footer__subblock {
+  /* grid-area: 2/1/3/3; */
+  max-width: 100%;
+  max-height: 25px;
+  margin: 0 120px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
+  border: 2px solid green;
+}
+
+@media screen and (max-width: 760px) {
+  .footer__subblock {
+    /* grid-area: 2/1/3/3; */
+    max-width: 100%;
+    max-height: 40px;
+    margin: 0 18px;
+  }
+}
+
+.footer__copy-right {
+  padding: 0;
+  margin: 0;
+  border: 1px solid red;
+  line-height: 20px;
+  font-size: 14px;
+  font-weight: 600;
+  font-style: normal;
+  opacity: 0.5;
+  color: #cfcfcf;
+}
+
+@media screen and (max-width: 760px) {
+  .footer__copy-right {
+    /* padding: 0;
+    margin: 0;
+    border: 1px solid red;
+    line-height: 20px;
+    font-size: 14px;
+    font-weight: 600;
+    font-style: normal;
+    color: #151515;
+    opacity: 0.15; */
+
+    align-self: center;
+  }
+}
+
+.footer__subscribe-block {
+  border: 1px solid red;
+  /* grid-area: 1/1/2/2; */
+  margin: 0 120px;
+}
+
+@media screen and (max-width: 760px) {
+  .footer__subscribe-block {
+    margin: 0 18px;
+  }
+}
+
+.footer__logo-image {
+  display: none;
+}
+
+@media screen and (max-width: 760px) {
+  .footer__logo-image {
+    display: block;
+    width: 38px;
+    height: 38px;
+  }
+}
+
+.switch_footer {
+  display: flex;
 }
 @media screen and (max-width: 760px) {
-  .switch {
-    order: 3;
-    align-self: center;
-    margin-bottom: 0px;
-    overflow: hidden;
-
-    /* height: 0px; */
+  .switch_footer {
+    display: none;
   }
-}
-
-.switch__flag-box {
-  width: 44px;
-  height: 24px;
-  border-radius: 12px;
-  display: flex;
-  justify-content: start;
-  background: url(../images/images-menu/switch-green.svg) 15% 50%/ 20px 20px no-repeat;
-  background-color: #fff;
-  /* background-position: 15% 50%; */
-  transition: background-color 0.3s;
-  animation: green-button_start 0.5s;
-}
-
-@keyframes green-button_start {
-  from {
-    background-position: 85% 50%;
-  }
-  to {
-    background-position: 15% 50%;
-  }
-}
-
-.switch__button-light {
-  cursor: pointer;
-  border: none;
-  width: 28px;
-  height: 28px;
-  background: url(../images/images-menu/switch-light.svg) 50% 50% / 28px 28px
-    no-repeat #efefef;
-}
-
-.switch__button-dark {
-  cursor: pointer;
-  border: none;
-  width: 20px;
-  height: 20px;
-  background: url(../images/images-menu/switch-dark.svg) 50% 50% / 20px 20px
-    no-repeat #efefef;
-}
-
-.switch__flag {
-  width: 20px;
-  height: 20px;
-  margin: 2px;
 }
 
 .par {
@@ -201,12 +196,6 @@
 .switch__flag-box_dark {
   background-color: #676767;
   transition: background-color 0.3s;
-}
-
-p {
-  padding: 0;
-  margin: 0;
-  margin-top: 200px;
 }
 
 .move {
