--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -3,5 +3,6 @@
   max-width: 1440px;
   min-width: 320px;
   /* background-color: #333; */
-  background-color: #e5e5e5;
+  background-color: #f4f4f4;
+  transition: background-color 0.3s;
 }
