--- a/pages/index.css
+++ b/pages/index.css
@@ -3,6 +3,7 @@
 
 @import url(../blocks/body/body.css);
 @import url(../blocks/page/page.css);
+@import url(../blocks/page/_dark/page_dark.css);
 
 /* : переключатель темы*/
 @import url(../blocks/switch/switch.css);
@@ -10,6 +11,8 @@
 @import url(../blocks/switch/__flag/switch__flag.css);
 @import url(../blocks/switch/__button-light/switch__button-light.css);
 @import url(../blocks/switch/__button-dark/switch__button-dark.css);
+
+@import url(../blocks/switch/_footer/switch_footer.css);
 
 /* : Ссылки*/
 
@@ -24,9 +27,24 @@
 @import url(../blocks/menu/menu.css);
 @import url(../blocks/menu/__subblock/menu__subblock.css);
 @import url(../blocks/menu/__button/menu__button.css);
-@import url(..//blocks/menu/__navigation/menu__navigation.css);
+@import url(../blocks/menu/__navigation/menu__navigation.css);
 @import url(../blocks/menu/__links-block/menu__links-block.css);
 
+/* : Подвал */
+
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__subblock/footer__subblock.css);
+@import url(../blocks/footer/__subscribe-block/footer__subscribe-block.css);
+@import url(../blocks/footer/__title/footer__title.css);
+@import url(../blocks/footer/__email/footer__email.css);
+@import url(../blocks/footer/__copy-right/footer__copy-right.css);
+@import url(../blocks/footer/__logo-image/footer__logo-image.css);
+
+@import url(../blocks/footer/_dark/footer_dark.css);
+@import url(../blocks/footer/__email/_dark/footer__email_dark.css);
+@import url(../blocks/footer/__copy-right/_dark/footer__copy-right_dark.css);
+@import url(../blocks/footer/__title/_dark/footer__title_dark.css);
+@import url(../blocks/footer/__logo-image/_dark/footer__logo-image_dark.css);
 /* @media screen and (max-width: 1100px) {
 
 }
@@ -34,154 +52,37 @@
 
 } */
 
-.footer {
-  background-color: #efefef;
-  border: 2px solid cyan;
-  max-width: 100%;
-  min-height: 424px;
-  display: grid;
-  grid-column: 1fr;
-  grid-template-rows: 1fr, 25px;
-  row-gap: 100px;
-}
-
-.footer__title {
-  margin: 80px 0 50px;
-  /* opacity: 0.5; */
-  max-width: 230px;
-  line-height: 32px;
-  font-size: 24px;
-  font-weight: 600;
-  font-style: normal;
-}
-
-@media screen and (max-width: 760px) {
-  .footer__title {
-    margin: 60px 0 40px;
-    /* opacity: 0.5; */
-    /* max-width: 100%; */
-    line-height: 32px;
-    font-size: 24px;
-    font-weight: 600;
-    font-style: normal;
-  }
-}
-
-.footer__email {
-  border: 1px solid #c7c7c7;
-  background-color: #efefef;
-  margin: 0;
-  width: 340px;
-  height: 50px;
-  padding: 0 20px;
-}
-
-@media screen and (max-width: 760px) {
-  .footer__email {
-    max-width: 240px;
-  }
-}
-
-.footer__email::placeholder {
-  line-height: 28px;
-  font-size: 14px;
-  font-weight: 500;
-  font-style: normal;
-  color: #151515;
-  opacity: 0.7;
-}
-
+/*
 .footer__form {
-  /* width: 360px; */
+  width: 360px;
   height: 50px;
-}
+} */
 
-.footer__subblock {
-  /* grid-area: 2/1/3/3; */
-  max-width: 100%;
-  max-height: 25px;
-  margin: 0 120px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  border: 2px solid green;
-}
+/*
 
-@media screen and (max-width: 760px) {
-  .footer__subblock {
-    /* grid-area: 2/1/3/3; */
-    max-width: 100%;
-    max-height: 40px;
-    margin: 0 18px;
-  }
-}
 
-.footer__copy-right {
-  padding: 0;
-  margin: 0;
-  border: 1px solid red;
-  line-height: 20px;
-  font-size: 14px;
-  font-weight: 600;
-  font-style: normal;
-  opacity: 0.5;
-  color: #cfcfcf;
-}
 
-@media screen and (max-width: 760px) {
-  .footer__copy-right {
-    /* padding: 0;
-    margin: 0;
-    border: 1px solid red;
-    line-height: 20px;
-    font-size: 14px;
-    font-weight: 600;
-    font-style: normal;
-    color: #151515;
-    opacity: 0.15; */
 
-    align-self: center;
-  }
-}
 
-.footer__subscribe-block {
-  border: 1px solid red;
-  /* grid-area: 1/1/2/2; */
-  margin: 0 120px;
-}
 
-@media screen and (max-width: 760px) {
-  .footer__subscribe-block {
-    margin: 0 18px;
-  }
-}
 
-.footer__logo-image {
-  display: none;
-}
 
-@media screen and (max-width: 760px) {
-  .footer__logo-image {
-    display: block;
-    width: 38px;
-    height: 38px;
-  }
-}
 
-.switch_footer {
-  display: flex;
-}
-@media screen and (max-width: 760px) {
-  .switch_footer {
-    display: none;
-  }
-}
+
+
+
+
+
+
+
+
+*/
 
 .par {
   line-height: 18px;
 }
 
-.light {
+/* .light {
   background-color: #efefef;
   color: #151515;
   transition: background-color 0.3s, color 0.3s;
@@ -191,7 +92,7 @@
   background-color: #333;
   color: #fff;
   transition: background-color 0.3s, color 0.3s;
-}
+} */
 
 .switch__flag-box_dark {
   background-color: #676767;
