--- a/blocks/switch/__button-dark/switch__button-dark.css
+++ b/blocks/switch/__button-dark/switch__button-dark.css
@@ -3,6 +3,6 @@
   border: none;
   width: 20px;
   height: 20px;
-  background: url(../../../images/images-menu/switch-dark.svg) 50% 50% / 20px
-    20px no-repeat #efefef;
+  background: url(../../../images/switch-images/switch-dark_light-theme.svg) 50%
+    50% / 20px 20px no-repeat;
 }
