--- a/blocks/switch/__button-light/switch__button-light.css
+++ b/blocks/switch/__button-light/switch__button-light.css
@@ -3,6 +3,6 @@
   border: none;
   width: 28px;
   height: 28px;
-  background: url(../../../images/images-menu/switch-light.svg) 50% 50% / 28px
-    28px no-repeat #efefef;
+  background: url(../../../images/switch-images/switch-light_light-theme.svg)
+    50% 50% / 28px 28px no-repeat #efefef;
 }
