--- a/blocks/menu/__navigation/menu__navigation.css
+++ b/blocks/menu/__navigation/menu__navigation.css
@@ -1,5 +1,5 @@
-.menu__navigation {
-  order: 2;
+/* .menu__navigation {
+   order: 2;
   margin: 28px 120px 28px auto;
 }
 @media screen and (max-width: 760px) {
@@ -7,7 +7,6 @@
     margin: 0 auto;
     margin-bottom: 0px;
     overflow: hidden;
-    /* height: 0px; */
     transition: margin-bottom 1s;
   }
-}
+} */
