--- a/pages/index.css
+++ b/pages/index.css
@@ -57,119 +57,79 @@
 
 } */
 
-.merckx {
-  border: 3px solid blue;
+@import url(../blocks/merckx/merckx.css);
+@import url(../blocks/merckx/__image/merckx__image.css);
+@import url(../blocks/merckx/__description/merckx__description.css);
+@import url(../blocks/merckx/__quote/merckx__quote.css);
+@import url(../blocks/merckx/__name/merckx__name.css);
+@import url(../blocks/merckx/__sport/merckx__sport.css);
+
+@import url(../blocks/merckx/__quote/_dark/merckx__quote_dark.css);
+@import url(../blocks/merckx/__name/_dark/merckx__name_dark.css);
+@import url(../blocks/merckx/__sport/_dark/merckx__sport_dark.css);
+/*
+
+
+
+*/
+.training {
   max-width: 100%;
+  border: 3px solid hotpink;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  column-gap: 80px;
+  /* grid-template-rows: repeat(3, minmax(30px, 1fr)); */
+  grid-row: 3;
+  /* column-gap: 160px; */
+  row-gap: 1px;
 }
-
-@media screen and (max-width: 1100px) {
-  .merckx {
-    border: 3px solid cyan;
-    grid-template-columns: 1fr;
-    grid-auto-rows: auto;
-    row-gap: 40px;
-  }
-}
-
-.merckx__image {
-  margin: 120px 0 60px 120px;
-  max-width: 100%;
-  /* max-height: auto; */
-  /* padding-top: 71.8%; */
-  background-image: url(../images/image-markes.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 50% 50%;
-}
-
-@media screen and (max-width: 1100px) {
-  .merckx__image {
-    margin: 60px 18px 0;
-    max-width: 100%;
-    padding-top: 71.8%;
-  }
-}
-
-.merckx__description {
-  margin: 120px 120px 60px 0;
-}
-@media screen and (max-width: 1100px) {
-  .merckx__description {
-    margin: 0 18px 40px;
-  }
-}
-
-.merckx__quote {
+.training__title {
+  max-height: 60px;
   padding: 0;
-  margin: 0 0 262px;
-  max-width: 470px;
-  line-height: 44px;
-  font-size: 34px;
-  font-weight: 600;
-  color: #151515;
-  letter-spacing: -0.5px;
-  transition: color 0.3s;
-}
-@media screen and (max-width: 1100px) {
-  .merckx__quote {
-    margin-bottom: 40px;
-    line-height: 29px;
-    font-size: 23px;
-  }
-}
-
-.merckx__quote_dark {
-  color: #fff;
-  transition: color 0.3s;
-}
-
-.merckx__name {
-  padding: 0;
-  margin: 0;
-  line-height: 32px;
-  font-size: 20px;
-  font-weight: 500;
+  margin: 150px 0 50px 120px;
+  border: 1px solid red;
+  grid-area: 1/1/2/2;
+  max-width: 460px;
+  line-height: 60px;
+  font-size: 55px;
+  font-weight: 700;
   font-style: normal;
   color: #151515;
-  transition: color 0.3s;
 }
-
-@media screen and (max-width: 1100px) {
-  .merckx__name {
-    line-height: 22px;
-    font-size: 14px;
-  }
-}
-.merckx__name_dark {
-  color: #fff;
-  transition: color 0.3s;
-}
-
-.merckx__sport {
+.training__description {
   padding: 0;
-  margin: 6px 0 0;
+  margin: 0 0 0 120px;
+  border: 1px solid red;
+  grid-area: 2/1/3/2;
+  max-width: 460px;
   line-height: 28px;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 400;
   font-style: normal;
-  color: #151515;
+  color: #222;
   opacity: 0.7;
-  transition: color 0.3s;
-}
-@media screen and (max-width: 1100px) {
-  .merckx__sport {
-    line-height: 16px;
-    font-size: 10px;
-    color: #222;
-  }
 }
 
-.merckx__sport_dark {
-  color: #e5e5e5;
-  transition: color 0.3s;
+.training__image {
+  grid-area: 1/2/4/3;
+  background-image: url(../images/images_3.png);
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  max-width: 580px;
+  max-height: 460px;
+  /* height: auto; */
+  margin: 150px 120px 120px 0;
+  border: 2px solid chartreuse;
+}
+.nav-block_training {
+  border: 1px solid red;
+  grid-area: 3/1/4/2;
+  margin: 180px 0 120px 120px;
+  max-height: 30px;
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+  max-width: 460px;
 }
 /*
 
@@ -181,6 +141,7 @@
 
 .par {
   line-height: 18px;
+  border: 2px solid orchid;
 }
 
 /* .light {
