--- a/blocks/nav-block/nav-block.css
+++ b/blocks/nav-block/nav-block.css
@@ -1,17 +1,17 @@
 .nav-block {
   margin: 0;
   padding: 0;
-  max-width: 500px;
+  /* max-width: 500px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  column-gap: 34px;
+  column-gap: 34px; */
 }
 @media screen and (max-width: 800px) {
   .nav-block {
-    flex-direction: column;
+    /* flex-direction: column;
     align-content: center;
     row-gap: 32px;
-    text-align: center;
+    text-align: center; */
   }
 }
