--- a/pages/index.css
+++ b/pages/index.css
@@ -84,8 +84,149 @@
 
 
 */
+.first-block {
+  border: 3px solid chartreuse;
+  margin: 30px 0;
+  max-width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-row: 4;
+  column-gap: 250px;
+}
+@media screen and (max-width: 1100px) {
+  .first-block {
+    grid-template-columns: 1fr;
+    grid-row: 3;
+  }
+}
 
+.first-block__stiky-image {
+}
+.first-block__title {
+  border: 1px solid red;
+  grid-area: 1/1/2/2;
+  max-width: 460px;
+  padding: 0;
+  margin: 80px 0 50px 120px;
+  line-height: 60px;
+  font-size: 55px;
+  font-weight: 700;
+  font-style: normal;
+  letter-spacing: -0.5px;
+  color: #151515;
+  transition: color 0.3s;
+}
+@media screen and (max-width: 1100px) {
+  .first-block__title {
+    grid-area: 1/1/2/2;
+    min-width: 284px;
+    margin: 40px 18px;
+    line-height: 40px;
+    font-size: 32px;
+  }
+}
+.first-block__title_dark {
+  color: #fff;
+  transition: color 0.3s;
+}
+.first-block__description {
+  border: 1px solid red;
+  grid-area: 2/1/3/2;
+  max-width: 460px;
+  padding: 0;
+  margin: 0 0 0 120px;
+  line-height: 28px;
+  font-size: 18px;
+  font-weight: 400;
+  font-style: normal;
+  color: #222;
+  opacity: 0.7;
+  transition: color 0.3s;
+}
+@media screen and (max-width: 1100px) {
+  .first-block__description {
+    grid-area: 3/1/4/2;
+    min-width: 284px;
+    margin: 0 18px;
+    line-height: 18px;
+    font-size: 12px;
+    color: #222;
+    opacity: 0.7;
+  }
+}
+.first-block__description_dark {
+  color: #e6e6e6;
+  transition: color 0.3s;
+}
+
+.first-block__button {
+  grid-area: 3/1/4/2;
+  width: 180px;
+  height: 50px;
+  border: none;
+  background-color: #24b47e;
+  border-radius: 4px;
+  margin: 50px 0 170px 120px;
+  line-height: 18px;
+  font-size: 14px;
+  font-weight: 600;
+  font-style: normal;
+  color: #fff;
+  letter-spacing: 1px;
+}
+
+@media screen and (max-width: 1100px) {
+  .first-block__button {
+    grid-area: 4/1/5/2;
+    margin: 40px auto;
+    width: 284px;
+    height: 46px;
+    /* width: 180px;
+    height: 50px;
+    border: none;
+    background-color: #24b47e;
+    border-radius: 4px;
+    margin: 50px 0 170px 120px;
+    line-height: 18px;
+    font-size: 14px;
+    font-weight: 600;
+    font-style: normal;
+    color: #fff;
+    letter-spacing: 1px; */
+  }
+}
+
+.first-block__model-bike {
+  grid-area: 4/1/5/2;
+  padding: 0;
+  margin: 0 0 180px 120px;
+}
+@media screen and (max-width: 1100px) {
+  .first-block__model-bike {
+    display: none;
+  }
+}
+.first-block__image {
+  border: 1px solid red;
+  grid-area: 1/2/5/3;
+  background-image: url(../images/first-block-image.png);
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: cover;
+  max-width: 610px;
+  max-height: 836px;
+}
+@media screen and (max-width: 1100px) {
+  .first-block__image {
+    border: 1px solid red;
+    grid-area: 2/1/3/2;
+    margin: 40px 18px 40px 48px;
+    max-width: 100%;
+    padding-top: 130%;
+  }
+}
 /*
+
 
 
 
