--- a/pages/index.css
+++ b/pages/index.css
@@ -84,14 +84,16 @@
 
 
 */
+
 .first-block {
   border: 3px solid chartreuse;
-  margin: 30px 0;
+  margin: 0;
   max-width: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-row: 4;
+  grid-template-rows: 5;
   column-gap: 250px;
+  box-sizing: border-box;
 }
 @media screen and (max-width: 1100px) {
   .first-block {
@@ -100,8 +102,55 @@
   }
 }
 
-.first-block__stiky-image {
+/* .first-block::before {
+  position: absolute;
+  z-index: 110;
+  top: 0;
+  left: 150px;
+  content: "";
+  width: 200px;
+  height: 100%;
+
+  border: 1px solid cyan;
+} */
+
+/* .aa {
+  margin: auto;
+  box-sizing: border-box;
+  position: relative;
+  max-width: 100%;
+  border: 3px solid navy;
 }
+
+.bb {
+  border: 1px solid red;
+  width: 440px;
+  margin-left: 250px;
+  top: 350px;
+  position: sticky;
+  margin-bottom: 50px;
+  z-index: 3;
+  shape-outside: linear-gradient(transparent, transparent);
+}*/
+.first-block__stiky-image {
+  padding: 10px;
+  grid-column: 1/3;
+  grid-row: 1;
+  position: sticky;
+  top: 413px;
+  left: 630px;
+  z-index: 100;
+  background-image: url(../images/image-stiсky/Cannondale_Systemsix_Himod.jpg);
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 20px;
+  background-color: #f4f4f4;
+  box-shadow: -20px 60px 220px rgba(0, 0, 0, 0.44);
+  width: 340px;
+  height: 260px;
+}
+
 .first-block__title {
   border: 1px solid red;
   grid-area: 1/1/2/2;
@@ -174,7 +223,10 @@
   color: #fff;
   letter-spacing: 1px;
 }
-
+.first-block__button:hover {
+  cursor: pointer;
+  opacity: 0.5;
+}
 @media screen and (max-width: 1100px) {
   .first-block__button {
     grid-area: 4/1/5/2;
@@ -199,7 +251,7 @@
 .first-block__model-bike {
   grid-area: 4/1/5/2;
   padding: 0;
-  margin: 0 0 180px 120px;
+  margin: 0 0 150px 120px;
 }
 @media screen and (max-width: 1100px) {
   .first-block__model-bike {
@@ -214,7 +266,7 @@
   background-position: 50% 50%;
   background-size: cover;
   max-width: 610px;
-  max-height: 836px;
+  max-height: 856px;
 }
 @media screen and (max-width: 1100px) {
   .first-block__image {
