--- a/pages/index.css
+++ b/pages/index.css
@@ -89,6 +89,7 @@
   border: 3px solid chartreuse;
   margin: 0;
   max-width: 100%;
+  max-height: 856px;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 5;
@@ -102,53 +103,24 @@
   }
 }
 
-/* .first-block::before {
-  position: absolute;
-  z-index: 110;
-  top: 0;
-  left: 150px;
-  content: "";
-  width: 200px;
-  height: 100%;
-
-  border: 1px solid cyan;
-} */
-
-/* .aa {
-  margin: auto;
-  box-sizing: border-box;
-  position: relative;
-  max-width: 100%;
-  border: 3px solid navy;
-}
-
-.bb {
-  border: 1px solid red;
-  width: 440px;
-  margin-left: 250px;
-  top: 350px;
-  position: sticky;
-  margin-bottom: 50px;
-  z-index: 3;
-  shape-outside: linear-gradient(transparent, transparent);
-}*/
 .first-block__stiky-image {
-  padding: 10px;
   grid-column: 1/3;
   grid-row: 1;
   position: sticky;
   top: 413px;
-  left: 630px;
+  /* left: 630px; */
+  left: calc(100vw / 2 - 100px);
   z-index: 100;
-  background-image: url(../images/image-stiсky/Cannondale_Systemsix_Himod.jpg);
+  background-image: url(../images/image-stiсky/aaaa.png);
   background-position: 50% 50%;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 80%;
   border-radius: 20px;
   background-color: #f4f4f4;
   box-shadow: -20px 60px 220px rgba(0, 0, 0, 0.44);
-  width: 340px;
-  height: 260px;
+  width: 440px;
+  height: 300px;
+  margin-bottom: 80px;
 }
 
 .first-block__title {
@@ -266,7 +238,8 @@
   background-position: 50% 50%;
   background-size: cover;
   max-width: 610px;
-  max-height: 856px;
+  max-height: 836px;
+  margin-top: 20px;
 }
 @media screen and (max-width: 1100px) {
   .first-block__image {
