--- a/pages/index.css
+++ b/pages/index.css
@@ -92,7 +92,7 @@
   max-height: 856px;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 5;
+  grid-template-rows: 4;
   column-gap: 250px;
   box-sizing: border-box;
 }
@@ -105,7 +105,7 @@
 
 .first-block__stiky-image {
   grid-column: 1/3;
-  grid-row: 1;
+  grid-row: 1/5;
   position: sticky;
   top: 413px;
   /* left: 630px; */
@@ -127,6 +127,7 @@
   border: 1px solid red;
   grid-area: 1/1/2/2;
   max-width: 460px;
+  max-height: 125px;
   padding: 0;
   margin: 80px 0 50px 120px;
   line-height: 60px;
@@ -155,7 +156,7 @@
   grid-area: 2/1/3/2;
   max-width: 460px;
   padding: 0;
-  margin: 0 0 0 120px;
+  margin: 1px 1px 1px 120px;
   line-height: 28px;
   font-size: 18px;
   font-weight: 400;
@@ -187,7 +188,7 @@
   border: none;
   background-color: #24b47e;
   border-radius: 4px;
-  margin: 50px 0 170px 120px;
+  margin: 50px 0 100px 120px;
   line-height: 18px;
   font-size: 14px;
   font-weight: 600;
@@ -204,7 +205,7 @@
     grid-area: 4/1/5/2;
     margin: 40px auto;
     width: 284px;
-    height: 46px;
+    max-height: 46px;
     /* width: 180px;
     height: 50px;
     border: none;
@@ -223,7 +224,7 @@
 .first-block__model-bike {
   grid-area: 4/1/5/2;
   padding: 0;
-  margin: 0 0 150px 120px;
+  margin: 0 0 180px 120px;
 }
 @media screen and (max-width: 1100px) {
   .first-block__model-bike {
