--- a/pages/index.css
+++ b/pages/index.css
@@ -79,178 +79,26 @@
 
 @import url(../blocks/training/__title/_dark/training__title_dark.css);
 @import url(../blocks/training/__description/_dark/training__description_dark.css);
+
+/* : Первый блок */
+
+@import url(../blocks/first-block/first-block.css);
+@import url(../blocks/first-block/__stiky-image/first-block__stiky-image.css);
+@import url(../blocks/first-block/__title/first-block__title.css);
+@import url(../blocks/first-block/__description/first-block__description.css);
+@import url(../blocks/first-block/__button/first-block__button.css);
+@import url(../blocks/first-block/__model-bike/first-block__model-bike.css);
+@import url(../blocks/first-block/__image/first-block__image.css);
+
+@import url(../blocks/first-block/__title/_dark/first-block__title_dark.css);
+@import url(../blocks/first-block/__description/_dark/first-block__description_dark.css);
+
 /*
 
 
 
 */
 
-.first-block {
-  border: 3px solid chartreuse;
-  margin: 0;
-  max-width: 100%;
-  max-height: 856px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 4;
-  column-gap: 250px;
-  box-sizing: border-box;
-}
-@media screen and (max-width: 1100px) {
-  .first-block {
-    grid-template-columns: 1fr;
-    grid-row: 3;
-  }
-}
-
-.first-block__stiky-image {
-  grid-column: 1/3;
-  grid-row: 1/5;
-  position: sticky;
-  top: 413px;
-  /* left: 630px; */
-  left: calc(100vw / 2 - 100px);
-  z-index: 100;
-  background-image: url(../images/image-stiсky/aaaa.png);
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  background-size: 80%;
-  border-radius: 20px;
-  background-color: #f4f4f4;
-  box-shadow: -20px 60px 220px rgba(0, 0, 0, 0.44);
-  width: 440px;
-  height: 300px;
-  margin-bottom: 81px;
-}
-
-.first-block__title {
-  border: 1px solid red;
-  grid-area: 1/1/2/2;
-  max-width: 460px;
-  max-height: 125px;
-  padding: 0;
-  margin: 80px 0 50px 120px;
-  line-height: 60px;
-  font-size: 55px;
-  font-weight: 700;
-  font-style: normal;
-  letter-spacing: -0.5px;
-  color: #151515;
-  transition: color 0.3s;
-}
-@media screen and (max-width: 1100px) {
-  .first-block__title {
-    grid-area: 1/1/2/2;
-    min-width: 284px;
-    margin: 40px 18px;
-    line-height: 40px;
-    font-size: 32px;
-  }
-}
-.first-block__title_dark {
-  color: #fff;
-  transition: color 0.3s;
-}
-.first-block__description {
-  border: 1px solid red;
-  grid-area: 2/1/3/2;
-  max-width: 460px;
-  padding: 0;
-  margin: 1px 1px 1px 120px;
-  line-height: 28px;
-  font-size: 18px;
-  font-weight: 400;
-  font-style: normal;
-  color: #222;
-  opacity: 0.7;
-  transition: color 0.3s;
-}
-@media screen and (max-width: 1100px) {
-  .first-block__description {
-    grid-area: 3/1/4/2;
-    min-width: 284px;
-    margin: 0 18px;
-    line-height: 18px;
-    font-size: 12px;
-    color: #222;
-    opacity: 0.7;
-  }
-}
-.first-block__description_dark {
-  color: #e6e6e6;
-  transition: color 0.3s;
-}
-
-.first-block__button {
-  grid-area: 3/1/4/2;
-  width: 180px;
-  height: 50px;
-  border: none;
-  background-color: #24b47e;
-  border-radius: 4px;
-  margin: 50px 0 100px 120px;
-  line-height: 18px;
-  font-size: 14px;
-  font-weight: 600;
-  font-style: normal;
-  color: #fff;
-  letter-spacing: 1px;
-}
-.first-block__button:hover {
-  cursor: pointer;
-  opacity: 0.5;
-}
-@media screen and (max-width: 1100px) {
-  .first-block__button {
-    grid-area: 4/1/5/2;
-    margin: 40px auto;
-    width: 284px;
-    max-height: 46px;
-    /* width: 180px;
-    height: 50px;
-    border: none;
-    background-color: #24b47e;
-    border-radius: 4px;
-    margin: 50px 0 170px 120px;
-    line-height: 18px;
-    font-size: 14px;
-    font-weight: 600;
-    font-style: normal;
-    color: #fff;
-    letter-spacing: 1px; */
-  }
-}
-
-.first-block__model-bike {
-  grid-area: 4/1/5/2;
-  padding: 0;
-  margin: 0 0 180px 120px;
-}
-@media screen and (max-width: 1100px) {
-  .first-block__model-bike {
-    display: none;
-  }
-}
-.first-block__image {
-  border: 1px solid red;
-  grid-area: 1/2/5/3;
-  background-image: url(../images/first-block-image.png);
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  background-size: cover;
-  max-width: 610px;
-  max-height: 836px;
-  margin-top: 20px;
-}
-@media screen and (max-width: 1100px) {
-  .first-block__image {
-    border: 1px solid red;
-    grid-area: 2/1/3/2;
-    margin: 40px 18px 40px 48px;
-    max-width: 100%;
-    padding-top: 130%;
-  }
-}
 /*
 
 
