--- a/pages/index.css
+++ b/pages/index.css
@@ -123,6 +123,44 @@
 @media screen and (max-width: 760px) {
 
 } */
+.bicycles {
+  border: 5px solid skyblue;
+  max-width: 100%;
+  /* display: flex;
+  flex-direction: column; */
+}
+.aa {
+  border: 3px solid green;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.bicycles__title {
+  border: 1px solid red;
+}
+.nav-block_bicycles {
+  border: 3px solid darkorchid;
+}
+
+.bicycles__cards {
+  padding: 0;
+  margin: 20px 0;
+  border: 2px solid darkorange;
+  max-width: 100%;
+  display: grid;
+}
+.bicycles__images {
+  border: 1px solid red;
+}
+.bicycles__image {
+  border: 1px solid red;
+}
+.bicycles__models {
+  border: 1px solid red;
+}
+.bicycles__model {
+  border: 1px solid red;
+}
 /*
 
 
