--- a/pages/index.css
+++ b/pages/index.css
@@ -142,23 +142,41 @@
 .slider_ {
   grid-area: 2/1/3/3;
 }
+.slider__container_1 {
+  border: 3px solid greenyellow;
+  /* overflow: hidden; */
 
-.bicycles__cards {
+  max-width: 100%;
+  /* display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  overflow-x: hidden;
+  scroll-behavior: smooth; */
+  display: grid;
+  grid-template-columns: 1;
+  grid-template-rows: 1;
+}
+.bicycles__block-cards {
+  /* flex-shrink: 0; */
+  grid-area: 1/1/2/2;
   padding: 0;
   margin: 0;
-  max-width: 100%;
+  width: 100%;
   border: 1px solid rgb(0, 170, 255);
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 1fr;
-
   column-gap: 50px;
+  visibility: hidden;
 }
 @media screen and (max-width: 760px) {
-  .bicycles__cards {
+  .bicycles__block-cards {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
   }
+}
+.bicycles__block-cards_active {
+  visibility: visible;
 }
 
 .bicycles__card {
@@ -168,6 +186,8 @@
 }
 .bicycles__box-image {
   border: 2px solid green;
+  background-color: #f4f4f4;
+  /* box-shadow: -20px 60px 220px rgba(0, 0, 0, 0.1); */
   border-radius: 20px;
   position: relative;
   padding-top: 100%;
@@ -180,31 +200,32 @@
   left: 20px;
   width: calc(100% - 40px);
   height: auto;
+  border-radius: 20px;
 }
 @media screen and (max-width: 760px) {
 }
 
-.a1 {
+.bicycles__card_place-1 {
   grid-area: 1/1/2/2;
 }
 @media screen and (max-width: 760px) {
-  .a1 {
+  .bicycles__card_place-1 {
     grid-area: 1/1/2/2;
   }
 }
-.a2 {
+.bicycles__card_place-2 {
   grid-area: 1/2/2/3;
 }
 @media screen and (max-width: 760px) {
-  .a2 {
+  .bicycles__card_place-2 {
     grid-area: 1/1/2/2;
   }
 }
-.a3 {
+.bicycles__card_place-3 {
   grid-area: 1/3/2/4;
 }
 @media screen and (max-width: 760px) {
-  .a3 {
+  .bicycles__card_place-3 {
     grid-area: 1/1/2/2;
   }
 }
