--- a/pages/index.css
+++ b/pages/index.css
@@ -5,6 +5,14 @@
 @import url(../blocks/page/page.css);
 @import url(../blocks/page/_dark/page_dark.css);
 
+/* : Повторяющиеся блоки*/
+@import url(../blocks/line/line.css);
+@import url(../blocks/title/title.css);
+
+/* ! модификаторы блоков*/
+@import url(../blocks/title/_dark/title_dark.css);
+@import url(../blocks/title/_bicycles/title_bicycles.css);
+
 /* : переключатель темы*/
 @import url(../blocks/switch/switch.css);
 @import url(../blocks/switch/__flag-box/switch__flag-box.css);
@@ -24,10 +32,16 @@
 @import url(../blocks/nav-block/nav-block.css);
 @import url(../blocks/nav-block/__wrapper/nav-block__wrapper.css);
 @import url(../blocks/nav-block/__link/nav-block__link.css);
-
-@import url(../blocks/nav-block/__link/_header/nav-block__link_header.css);
+/* ! модификаторы блока навигации*/
 @import url(../blocks/nav-block/_header/nav-block_header.css);
 @import url(../blocks/nav-block/_training/nav-block_training.css);
+@import url(../blocks/nav-block/_bicycles/nav-block_bicycles.css);
+/* ! модификаторы ссылок*/
+@import url(../blocks/nav-block/__link/_header/nav-block__link_header.css);
+@import url(../blocks/nav-block/__link/_bicycles/nav-block__link_bicycles.css);
+@import url(../blocks/nav-block/__link/_bicycles_dark/nav-block__link_bicycles_dark.css);
+@import url(../blocks/nav-block/__link/_bicycles_active/nav-block__link_bicycles_active.css);
+@import url(../blocks/nav-block/__link/_bicycles_active_dark/nav-block__link_bicycles_active_dark.css);
 
 @import url(../blocks/menu/menu.css);
 @import url(../blocks/menu/__subblock/menu__subblock.css);
@@ -123,76 +137,10 @@
 @media screen and (max-width: 760px) {
 
 } */
-.line {
-  display: none;
-}
-@media screen and (max-width: 760px) {
-  .line {
-    display: block;
-    grid-area: 1/1/2/2;
-    border-top: 1px solid #e3e3e3;
-    margin: 40px 18px;
-  }
-}
-.bicycles {
-  border: 5px solid skyblue;
-  max-width: 100%;
-  display: grid;
-  grid-template-columns: repeat(2, minmax(1px, 1fr));
-  grid-template-rows: 2;
-}
-@media screen and (max-width: 760px) {
-  .bicycles {
-    grid-template-columns: 1fr;
-    grid-template-rows: 4;
-  }
-}
 
-.bicycles__title {
-  border: 1px solid red;
-  grid-area: 1/1/2/2;
-  margin: 60px 0 0 120px;
+/* : Блок bicycles */
+@import url(../blocks/bicycles/bicycles.css);
 
-  line-height: 60px;
-  font-size: 55px;
-  font-weight: 700;
-  font-style: normal;
-  color: #151515;
-  letter-spacing: -0.5px;
-  transition: color 0.3s;
-}
-@media screen and (max-width: 760px) {
-  .bicycles__title {
-    grid-area: 2/1/3/2;
-    margin: 0 18px 40px;
-    line-height: 40px;
-    font-size: 32px;
-    color: #151515;
-  }
-}
-.bicycles__title_dark {
-  color: #fff;
-  transition: color 0.3s;
-}
-
-.nav-block_bicycles {
-  border: 3px solid darkorchid;
-  grid-area: 1/2/2/3;
-  display: flex;
-  flex-direction: row;
-  gap: 40px;
-  margin-right: 120px;
-  margin-top: 92px;
-  justify-self: end;
-}
-@media screen and (max-width: 760px) {
-  .nav-block_bicycles {
-    grid-area: 3/1/4/2;
-    border: 3px solid darkorchid;
-    justify-self: start;
-    margin: 0 0 0 18px;
-  }
-}
 .slider_ {
   margin: 120px 120px 40px;
   grid-area: 2/1/3/3;
@@ -200,11 +148,11 @@
 @media screen and (max-width: 760px) {
   .slider_ {
     grid-area: 4/1/5/3;
-    margin: 20px 18px 64px;
+    margin: 20px 18px 0px;
   }
 }
 .slider__container_1 {
-  border: 3px solid greenyellow;
+  /* border: 3px solid greenyellow; */
   max-width: 100%;
   /* display: flex;
   flex-direction: row;
@@ -221,12 +169,14 @@
   padding: 0;
   margin: 0;
   width: 100%;
-  border: 1px solid rgb(0, 170, 255);
+  /* border: 1px solid rgb(0, 170, 255); */
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 1fr;
   column-gap: 50px;
   visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.3s, visibility 0.4s;
 }
 @media screen and (max-width: 760px) {
   .bicycles__block-cards {
@@ -235,16 +185,18 @@
   }
 }
 .bicycles__block-cards_active {
+  opacity: 1;
   visibility: visible;
+  transition: opacity 0.3s;
 }
 
 .bicycles__card {
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 @media screen and (max-width: 760px) {
 }
 .bicycles__box-image {
-  border: 2px solid green;
+  /* border: 2px solid green; */
   background-color: #f4f4f4;
   /* box-shadow: -20px 60px 220px rgba(0, 0, 0, 0.1); */
   border-radius: 20px;
@@ -291,20 +243,20 @@
   }
 }
 .bicycles__model {
-  border: 1px solid red;
+  /* border: 1px solid red; */
   padding: 0;
   margin: 22px 0 0;
   line-height: 22px;
   font-size: 18px;
   font-weight: 600;
   font-style: normal;
-  color: #151515;
+  color: var(--color);
   transition: color 0.3s;
 }
 @media screen and (max-width: 760px) {
   .bicycles__model {
     text-align: center;
-    margin-top: 5px;
+    margin: 5px 0 16px;
     line-height: 18px;
     font-size: 14px;
 
@@ -316,11 +268,19 @@
   transition: color 0.3s;
 }
 .ww {
-  width: 20px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin: 20px auto 40px;
+  display: none;
+}
+
+@media screen and (max-width: 760px) {
+  .ww {
+    /* border: 1px solid red; */
+    grid-area: 5/1/6/2;
+    width: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 20px auto 40px;
+  }
 }
 .qq {
   width: 4px;
