--- a/pages/index.css
+++ b/pages/index.css
@@ -141,6 +141,15 @@
 /* : Блок bicycles */
 @import url(../blocks/bicycles/bicycles.css);
 
+.position {
+}
+@media screen and (max-width: 760px) {
+  .position {
+    order: -1;
+    transition: 0.3s;
+  }
+}
+
 .slider_ {
   margin: 120px 120px 40px;
   grid-area: 2/1/3/3;
@@ -154,11 +163,6 @@
 .slider__container_1 {
   /* border: 3px solid greenyellow; */
   max-width: 100%;
-  /* display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  overflow-x: hidden;
-  scroll-behavior: smooth; */
   display: grid;
   grid-template-columns: 1;
   grid-template-rows: 1;
